<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="26dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="Back"
            android:textColor="#BDBDBD"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/header"
            android:text="@string/create_new_account" />

        <TextView
            style="@style/discription"
            android:text="@string/welcome_2" />

        <EditText
            android:id="@+id/rEmail"
            style="@style/borderededittext"
            android:layout_marginTop="32dp"
            android:hint="Your email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/rUserName"
            style="@style/borderededittext"
            android:layout_marginTop="10dp"
            android:hint="Username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/rPassword"
            style="@style/borderededittext"
            android:layout_marginTop="10dp"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/rRepeatPassword"
            style="@style/borderededittext"
            android:layout_marginTop="10dp"
            android:hint="Repeat Password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            style="@style/submitbox"
            android:layout_marginTop="30dp"
            android:text="@string/register" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="27dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="11dp"
                android:scaleType="fitXY"
                android:src="@drawable/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textColor="@color/darkgray" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <RelativeLayout
                style="@style/iconbox"
                android:layout_marginRight="5dp"
                android:background="@drawable/iconbg">

                <ImageView
                    style="@style/icon"
                    android:src="@drawable/google" />
            </RelativeLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RelativeLayout
                style="@style/iconbox"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/iconbg">

                <ImageView
                    style="@style/icon"
                    android:src="@drawable/fb" />
            </RelativeLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RelativeLayout
                style="@style/iconbox"
                android:layout_marginStart="5dp"
                android:background="@drawable/iconbg">

                <ImageView
                    style="@style/icon"
                    android:src="@drawable/twitter" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>





